@@ -7,6 +7,10 @@ kotlin {
     jvmToolchain(22)
 }
 
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
+
 dependencies {
     implementation(projects.generatedWinrtBindings)
     implementation(projects.winrtCore)
@@ -16,4 +20,5 @@ dependencies {
 
 application {
     mainClass = "dev.winrt.sample.jvm.MainKt"
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
